# bump

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  bump.nomad.hcl  bump.yml  nomad.hcl
.github/workflows/: deploy.yml
src/: api.rs  cli.rs  config.rs  error.rs  main.rs  route.rs  routes.rs  worker.rs
src/handlers/: assets.rs  health.rs  mod.rs
src/services/: assets.rs
src/stores/assets/: mod.rs
ui/: .prettierrc  package.json  pnpm-lock.yaml
