[package]
name = "bump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.3.1", features = ["rustls"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
envy = "0.4.2"
log = "0.4.19"
paste = "1.0.14"
serde = { version = "1.0.179", features = ["derive"] }
